WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290625
MathML unknown elements are not rendered
https://bugs.webkit.org/show_bug.cgi?id=290625
Summary
MathML unknown elements are not rendered
Simon Pieters (:zcorpan)
Reported
2025-03-28 07:32:06 PDT
Demo:
https://software.hixie.ch/utilities/js/live-dom-viewer/saved/13597
<math><a href=#><mi>x</mi></a></math> `a` is an unknown MathML element (currently), and is not rendered in WebKit. The spec says unknown elements should be treated as `mrow`.
> Unknown MathML elements behave the same as the mrow element.
https://w3c.github.io/mathml-core/#ref-for-dfn-unknown-mathml-element-2
In
https://github.com/w3c/mathml-core/issues/142
there's a proposal to make `a` the MathML "link" element.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-04 07:33:13 PDT
<
rdar://problem/148593275
>
Ahmad Saleem
Comment 2
2025-09-09 12:26:55 PDT
Source Code -
https://searchfox.org/wubkat/rev/379f807d0ee26713ff73973eea9a42e90f274bd7/Source/WebCore/mathml/MathMLUnknownElement.h#44
Eri
Comment 3
2025-09-22 05:24:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51113
Eri
Comment 4
2025-09-23 05:13:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51189
EWS
Comment 5
2025-09-26 08:14:15 PDT
Committed
300580@main
(752e87ed0dc7): <
https://commits.webkit.org/300580@main
> Reviewed commits have been landed. Closing PR #51189 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug