Render MathML unknown elements as mrow. https://bugs.webkit.org/show_bug.cgi?id=290625

Reviewed by NOBODY (OOPS!).

The MathML Core spec says that unknown elements should be rendered
as an mrow. These changes are gated behind the CoreMathMLEnabled preference.
Update the user agent stylesheet to align closer with the spec.

No new tests (OOPS!).

No new tests (OOPS!).
* Source/WebCore/css/mathml.css:
(merror):
(ms, mtext, mi, mn, mo, annotation, mtd):
(mfrac):
(mfrac > *):
(mfrac > :nth-child(2)):
(mroot > *:last-child):
(mroot, msqrt):
(msub > * + *, msup > * + *, msubsup > * + *, mmultiscripts > * + *, munder > * + *, mover > * + *, munderover > * + *):
(mfrac > :nth-child(2),): Deleted.
* Source/WebCore/mathml/MathMLElement.cpp:
(WebCore::MathMLElement::childShouldCreateRenderer const):
* Source/WebCore/mathml/MathMLRowElement.cpp:
(WebCore::MathMLRowElement::createElementRenderer):
* Source/WebCore/mathml/MathMLUnknownElement.cpp:
(WebCore::MathMLUnknownElement::rendererIsNeeded):
* Source/WebCore/mathml/MathMLUnknownElement.h: